@@ -4,6 +4,7 @@
 	new feature: HTTP installer
 	bugfix: router HW type list was broken
 	update: Aten KVM switches and consoles
+	update: Tainet MUXes
 0.14.11 2008-02-15
 	bugfix: rackspace allocation was broken by magic_quotes fix
 	bugfix: don't generate error messages by accessing _GET array
